--- a/SavegameAutoBackupAgent/App.config
+++ b/SavegameAutoBackupAgent/App.config
@@ -10,8 +10,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="SaveScumContext" connectionString="Data Source=|DataDirectory|\metadata.sdf"
-      providerName="System.Data.SqlServerCe.4.0" />
+    <add name="SaveScumContext" connectionString="Data Source=|DataDirectory|\metadata.sdf" providerName="System.Data.SqlServerCe.4.0" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
