--- a/SavegameAutoBackupAgent/App.config
+++ b/SavegameAutoBackupAgent/App.config
@@ -32,8 +32,14 @@
       <setting name="SaveScumAppDataDirectory" serializeAs="String">
         <value>{ApplicationData}\SaveScum</value>
       </setting>
-      <setting name="SaveScumAppArchives" serializeAs="String">
+      <setting name="DefaultArchiveLocation" serializeAs="String">
         <value>{ApplicationData}\SaveScum\Archives\{GameTitle}</value>
+      </setting>
+      <setting name="DefaultFormat" serializeAs="String">
+        <value>Zip</value>
+      </setting>
+      <setting name="DefaultArchiveTriggerDelay" serializeAs="String">
+        <value>5000</value>
       </setting>
     </SaveScumAgent.Properties.Settings>
     <SavegameAutoBackupAgent.Properties.Settings>
