--- a/SavegameAutoBackupAgent/Properties/Settings.settings
+++ b/SavegameAutoBackupAgent/Properties/Settings.settings
@@ -17,8 +17,14 @@
     <Setting Name="SaveScumAppDataDirectory" Type="System.String" Scope="Application">
       <Value Profile="(Default)">{ApplicationData}\SaveScum</Value>
     </Setting>
-    <Setting Name="SaveScumAppArchives" Type="System.String" Scope="Application">
+    <Setting Name="DefaultArchiveLocation" Type="System.String" Scope="Application">
       <Value Profile="(Default)">{ApplicationData}\SaveScum\Archives\{GameTitle}</Value>
+    </Setting>
+    <Setting Name="DefaultFormat" Type="SaveScumAgent.Archiver.Formats.ArchiveFormat" Scope="Application">
+      <Value Profile="(Default)">Zip</Value>
+    </Setting>
+    <Setting Name="DefaultArchiveTriggerDelay" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">5000</Value>
     </Setting>
   </Settings>
 </SettingsFile>
