--- a/SavegameAutoBackupAgent/packages.config
+++ b/SavegameAutoBackupAgent/packages.config
@@ -1,22 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
-  <package id="Costura.Fody" version="1.3.3.0" targetFramework="net45" developmentDependency="true" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net45" />
-  <package id="FluentMigrator" version="1.5.0.0" targetFramework="net45" />
-  <package id="FluentMigrator.Tools" version="1.5.0.0" targetFramework="net45" />
-  <package id="Fody" version="1.28.3" targetFramework="net45" developmentDependency="true" />
-  <package id="LibGit2Sharp" version="0.21.0.176" targetFramework="net45" />
-  <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net45" />
-  <package id="MahApps.Metro.Resources" version="0.4.0.0" targetFramework="net45" />
-  <package id="MaterialDesignColors" version="0.0.0.0" targetFramework="net45" />
-  <package id="MaterialDesignThemes" version="0.0.0.50" targetFramework="net45" />
-  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
-  <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
-  <package id="RhinoMocks" version="3.6.1" targetFramework="net45" />
-  <package id="SevenZipSharp" version="0.64" targetFramework="net45" />
-  <package id="System.IO.Abstractions" version="2.0.0.113" targetFramework="net45" />
-  <package id="System.IO.Abstractions.TestingHelpers" version="2.0.0.113" targetFramework="net45" />
-  <package id="SystemWrapper" version="0.4" targetFramework="net45" />
+  <package id="Costura.Fody" version="1.3.3.0" targetFramework="net45" developmentDependency="true" userInstalled="true" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" userInstalled="true" />
+  <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net45" userInstalled="true" />
+  <package id="FluentMigrator" version="1.5.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="FluentMigrator.Tools" version="1.5.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="Fody" version="1.28.3" targetFramework="net45" developmentDependency="true" userInstalled="true" />
+  <package id="FontAwesome.WPF" version="5.0.0-alpha" targetFramework="net45" userInstalled="true" />
+  <package id="LibGit2Sharp" version="0.21.0.176" targetFramework="net45" userInstalled="true" />
+  <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net45" userInstalled="true" />
+  <package id="MahApps.Metro.Resources" version="0.4.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="MaterialDesignColors" version="0.0.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="MaterialDesignThemes" version="0.0.0.50" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" userInstalled="true" />
+  <package id="Moq" version="4.2.1502.0911" targetFramework="net45" userInstalled="true" />
+  <package id="RhinoMocks" version="3.6.1" targetFramework="net45" userInstalled="true" />
+  <package id="SevenZipSharp" version="0.64" targetFramework="net45" userInstalled="true" />
+  <package id="System.IO.Abstractions" version="2.0.0.113" targetFramework="net45" userInstalled="true" />
+  <package id="System.IO.Abstractions.TestingHelpers" version="2.0.0.113" targetFramework="net45" userInstalled="true" />
+  <package id="SystemWrapper" version="0.4" targetFramework="net45" userInstalled="true" />
+  <package id="TimeAgo" version="1.0.7" targetFramework="net45" userInstalled="true" />
 </packages>
